# versioninfo

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/versioninfo/: exceptions.py  parser.py
tests/: test_linters.py  test_parser.py
tests/data/: 31fb24.0x5158c-0x51708.json  325003_parite.0x52714-0x52b9a.json  56a902_dridex.0x2d060-0x2d3fc.json  56a902_dridex_stringtables.0x2d060-0x2d3fc.pickle  56a902_dridex_stringtables.0x2d060-0x2d3fc.txt  9346fa_noffi.0x60830-0x60960.pickle  9346fa_noffi.0x60830-0x60960.txt  98629c.0x4858c-0x48d94.json  c7dc40_gandcrab.0x4a598-0x4a764.pickle  c7dc40_gandcrab.0x4a598-0x4a764.txt  cb1c60_csrss_win7.0x1798-0x1b30.json  fc04e8.0x37e18-0x38004.json  fc04e8.0x37e18-0x38004.pickle  fc04e8.0x37e18-0x38004.txt  synthetic_unknownfileinfo_no_children.json  test_get_fileinfo_csrss_win7.pickle  test_get_fileinfo_csrss_win7.txt  test_get_stringfileinfo_csrss_win7.pickle  test_get_stringfileinfo_csrss_win7.txt  test_get_strings_csrss_win7.pickle  test_get_strings_csrss_win7.txt  test_get_stringtables_csrss_win7.pickle  test_get_stringtables_csrss_win7.txt  test_get_stringtables_txkbci_alienware.pickle  test_get_stringtables_txkbci_alienware.txt  test_get_versioninfo_csrss_win7.pickle  test_get_versioninfo_csrss_win7.txt
yara/: ruleset.yar
