[metadata]
name = versioninfo
version = 1.1.2
author = Malwarology LLC
description = Parse PE VS_VERSIONINFO structure and return JSON string.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malwarology/versioninfo
project_urls =
    Bug Tracker = https://github.com/malwarology/versioninfo/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = True
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.11.0

[options.packages.find]
where = src

[pycodestyle]
max-line-length = 120

[pydocstyle]
ignore = D104,D107,D203,D213

[coverage:run]
branch = True
source = src
